config("minimal_size_build") {
  cflags_cc = [
    "-fno-exceptions",
    "-fno-rtti",
  ]
}

config("new_build") {
  cflags_cc = [
    "-std=c++17",
    "-fvisibility=hidden",
  ]
}

config("fmt_build") {
  include_dirs = [ "third_party/fmt/include" ]
  defines = [
    "FMT_EXPORT",
    "FMT_SHARED",
  ]
}

config("glog_build") {
  include_dirs = [
    "third_party/include",
    "third_party/include/glog",
    "third_party/glog/src",
  ]
  defines = [
    "DISABLE_RTTI",
    "GOOGLE_NAMESPACE=google",
    "HAVE_DLADDR",
    "HAVE_FCNTL",
    "HAVE_PREAD",
    "HAVE_PTHREAD",
    "HAVE_PWRITE",
    "HAVE_RWLOCK",
    "HAVE_SIGACTION",
    "HAVE_SYS_SYSCALL_H",
    "HAVE_SYS_TIME_H",
    "HAVE_SYS_UTSNAME_H",
    "HAVE_UNISTD_H",
    "HAVE___ATTRIBUTE__",
    "HAVE___SYNC_VAL_COMPARE_AND_SWAP",
    "_END_GOOGLE_NAMESPACE_=}",
    "_START_GOOGLE_NAMESPACE_=namespace google {",
  ]
}

source_set("glog_source") {
  configs = [
    ":minimal_size_build",
    ":glog_build",
  ]
  sources = [
    "third_party/glog/src/demangle.cc",
    "third_party/glog/src/logging.cc",
    "third_party/glog/src/raw_logging.cc",
    "third_party/glog/src/signalhandler.cc",
    "third_party/glog/src/symbolize.cc",
    "third_party/glog/src/utilities.cc",
    "third_party/glog/src/vlog_is_on.cc",
  ]
}

source_set("fmt_source") {
  configs = [
    ":minimal_size_build",
    ":fmt_build",
    ":new_build",
  ]
  sources = [ "third_party/fmt/src/format.cc" ]
}

source_set("spdlog_source") {
  configs = [
    ":minimal_size_build",
    ":fmt_build",
  ]
  cflags_cc = [ "-std=c++17" ]
  include_dirs = [ "third_party/spdlog/include" ]
  defines = [
    "SPDLOG_NO_EXCEPTIONS",
    "SPDLOG_COMPILED_LIB",
    "SPDLOG_SHARED_LIB",
    "SPDLOG_FMT_EXTERNAL",
  ]
  sources = [
    "third_party/spdlog/src/async.cpp",
    "third_party/spdlog/src/cfg.cpp",
    "third_party/spdlog/src/color_sinks.cpp",
    "third_party/spdlog/src/file_sinks.cpp",
    "third_party/spdlog/src/spdlog.cpp",
    "third_party/spdlog/src/stdout_sinks.cpp",
  ]
  deps = [ ":fmt_source" ]
}

if (current_os == "android") {
  shared_library("spdlog") {
    libs = [
      "c++",
      "m",
    ]
    deps = [
      ":fmt_source",
      ":spdlog_source",
    ]
  }
  shared_library("glog") {
    libs = [ "c++" ]
    deps = [ ":glog_source" ]
  }
}
